[tool.poetry]
name = "data-generation-and-visualization"
version = "0.1.0"
description = ""
authors = ["ikari2k <pluta.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
plotly = "^5.19.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
